Name:               hssh
Version:            0.0.1
Synopsis:           Pure haskell SSH2 client
License:            AllRightsReserved
Author:             Alexander Neganov <ikkeps@gmail.com>
Maintainer:         ikkeps@gmail.com
Category:           Network
Build-type:         Simple
Cabal-version:      >= 1.14
Tested-with:        GHC == 7.6.*

Executable test
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-orphans
  Default-language: Haskell2010
  Extensions:       OverloadedStrings
                  , RecordWildCards
  build-depends:    base                      == 4.6.*
                  , bytestring                == 0.10.*
                  , conduit                   == 1.0.*
                  , cereal                    == 0.3.*
                  , cereal-conduit            == 0.7.*
                  , network-conduit           == 1.0.*
                  , transformers              == 0.3.*
