Name:               hssh
Version:            0.0.1
Synopsis:           Pure haskell SSH2 client
License:            AllRightsReserved
Author:             Alexander Neganov <ikkeps@gmail.com>
Maintainer:         ikkeps@gmail.com
Category:           Network
Build-type:         Simple
Cabal-version:      >= 1.14
Tested-with:        GHC == 7.6.*

Executable test
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-orphans
  Default-language: Haskell2010
  Extensions:       OverloadedStrings
                  , RecordWildCards
                  , GeneralizedNewtypeDeriving
                  , MultiParamTypeClasses
                  , TypeFamilies
                  , NamedFieldPuns
                  , ExistentialQuantification
  build-depends:    base                      == 4.6.*
                  , mtl                       == 2.1.*  
                  , bytestring                == 0.10.*
                  , conduit                   == 1.0.*
                  , cereal                    == 0.3.*
                  , cereal-conduit            == 0.7.*
                  , network-conduit           == 1.0.*
                  , crypto-api                == 0.12.*
                  , cryptohash-cryptoapi      == 0.1.*
                  , transformers              == 0.3.*
                  , transformers-base         == 0.4.*
                  , monad-control             == 0.3.*
